# -Stratscciatella

./: .gitignore  CMakeLists.txt  README.md
include/: csv_data_hancdler.h  data_handler.h
python/: bindings.cpp
src/: csv_data_handler.cpp
tests/: test_generate_mock_data.py  test_logger.py
tests/cpp/: test_csv_data_handler.cpp
utils/: generate_mock_data.py  logger.py
